# cong-cu-cao-web

./: .env.example  .gitignore  Dockerfile  README.md  history.md  netlify.toml  package-lock.json  package.json  pyproject.toml  render-build.sh  server.js  test-fetch.js  test-fetch.mjs  test-hc.js  test-pico.js  test-search.js
docs/: architecture.md  current-behavior.md  rewrite-verification.md
docs/superpowers/plans/: 2026-06-19-executive-dashboard-redesign.md  2026-06-19-sheet-multiselect-search-fix.md
docs/superpowers/specs/: 2026-06-18-google-sheet-pricing-design.md  2026-06-19-executive-dashboard-redesign.md
input/: my-site-urls.txt
lib/: scraper-core.js  sheet-pricing-service.js  sheet-pricing-utils.js
netlify/functions/: scrape.js  sheet-pricing.js
public/: index.html  sheet-pricing.js
scratch/: compare-extractors.mjs  compare-skus.mjs  test-new-logic.mjs
scripts/: google-sheet-pricing-apps-script.gs  normalize-product.mjs  reprocess-in-place.mjs  reprocess-test2.mjs
src/crawldata/: __init__.py  cli.py  config.py  logger.py
src/crawldata/adapters/: __init__.py  haravan.py  sheets_apps_script.py  sheets_google_api.py  telegram.py
src/crawldata/cache/: store.py
src/crawldata/crawlers/: fetcher.py  page_verifier.py  product_extractor.py  search_engines.py  sitemap_discovery.py
src/crawldata/jobs/: __init__.py  manager.py  pricing_job.py
src/crawldata/models/: __init__.py  data.py
tests/: sheet-pricing-service.test.js  sheet-pricing-utils.test.js  test_cli.py  test_crawler.py  test_parser.py  test_storage.py  test_utils.py
(+14 files in other folders)
