[project]
name = "fast-scraper-web-python"
version = "1.0.0"
description = "Python-based Auto-Pricing and Google Sheets/Haravan Synchronization System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.44.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
crawldata = "crawldata.cli:app"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["N815", "E501", "UP038", "RUF013", "B023", "B007", "B904", "E402", "RUF006", "E712", "C414"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
